--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starwars-names",
+  "name": "github-names",
   "version": "1.0.0",
   "description": "Get random Star Wars names",
   "main": "dist/index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kentcdodds/starwars-names.git"
+    "url": "git+https://github.com/joseacabaneros/github-names.git"
   },
   "keywords": [
     "random",
@@ -25,12 +25,12 @@
   "files": [
     "dist"
   ],
-  "author": "Kent C. Dodds <kent@doddsfamily.us> (http://kentcdodds.com/)",
+  "author": "Jose A. Cabaneros <joseacabaneros@gmail.com> (http://joseacabaneros.github.io/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kentcdodds/starwars-names/issues"
+    "url": "https://github.com/joseacabaneros/github-names/issues"
   },
-  "homepage": "https://github.com/kentcdodds/starwars-names#readme",
+  "homepage": "https://github.com/joseacabaneros/github-names#readme",
   "dependencies": {
     "unique-random-array": "1.0.0"
   },
