--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-names",
   "version": "1.0.0",
-  "description": "Get random Star Wars names",
+  "description": "Get random GitHub usernames",
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
