--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "random-strings-gen",
-  "version": "2.0.1",
+  "version": "0.0.0-development",
   "description": "Generator for random strings",
   "main": "dist/index.js",
   "scripts": {
+    "commit": "git-cz",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
@@ -13,15 +14,16 @@
     "watch:test": "mocha --watch",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "lint": "eslint src",
-    "validate": "npm-run-all --parallel test lint build"
+    "validate": "npm-run-all --parallel test lint build",
+    "release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/joseacabaneros/github-names.git"
+    "url": "https://github.com/joseacabaneros/github-names.git"
   },
   "keywords": [
     "random",
-    "star wars"
+    "string"
   ],
   "files": [
     "dist"
@@ -43,7 +45,9 @@
     "babel-register": "6.11.6",
     "chai": "3.5.0",
     "codecov": "3.8.1",
+    "commitizen": "4.2.2",
     "cross-env": "2.0.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "3.2.0",
     "eslint-config-kentcdodds": "^9.0.0",
     "ghooks": "1.3.2",
@@ -52,6 +56,8 @@
     "npm-run-all": "2.3.0",
     "nyc": "7.1.0",
     "rimraf": "2.5.4",
+    "semantic-release": "^17.3.0",
+    "validate-commit-msg": "2.14.0",
     "webpack": "1.13.1"
   },
   "nyc": {
@@ -87,8 +93,12 @@
     }
   },
   "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    },
     "ghooks": {
-      "pre-commit": "npm run validate"
+      "pre-commit": "npm run validate",
+      "commit-msg": "validate-commit-msg"
     }
   }
 }
