--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "lint": "eslint src",
     "validate": "npm-run-all --parallel test lint build",
-    "release": "semantic-release pre && npm publish && semantic-release post"
+    "release": "semantic-release && npm publish"
   },
   "repository": {
     "type": "git",
